--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.6",
+        "sass": "^1.56.1",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "sass": "^1.56.1"
+        "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "feather-icons": "^4.29.0"
     }
 }
